--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,7 @@
         <div class="sec-one">
             <h2 class="sec-one__name">Kishor B</h2>
             <p class="sec-one__role">Web Developer</p>
-            <a href="portfolio.html" class="sec-one__contact">Home</a>
+            <a href="index.html" class="sec-one__contact">Home</a>
         </div>
         <div class="contact-form">
             <form>
